# jnews-scraping

./: .env.template  .gitignore  README.md  main.py  pyproject.toml
jnews/: index.html
